--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap";
+@import "**/*";
+
+.tag-container .tag {
+  height: 30px;
+  margin: 5px;
+  padding: 5px 6px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  background: #eee;
+  display: flex;
+  align-items: center;
+  color: #333;
+}
+
+.tag i {
+  font-size: 16px;
+  color: red;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.tag-container input {
+  padding: 5px;
+  font-size: 16px;
+  border: 0;
+  outline: none;
+  color: #333;
+  flex: 1;
+}
