--- a/app/views/food/index.html.erb
+++ b/app/views/food/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Food#index</h1>
-<p>Find me in app/views/food/index.html.erb</p>
+<div class="container-lg" style="margin-top:3%">
+  <h1>Warung Pak Gagah</h1>
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Num</th>
+        <th scope="col">Name</th>
+        <th scope="col">Price</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @foods.each_with_index do |food, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%= food.name %></td>
+        <td><%= food.price %></td>
+        <td><a href="/food/<%= index + 1 %>">Show</a></td>
+        <td>
+          <form action="/food/edit/<%= index + 1 %>" method="get">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-primary" type="submit" value="Edit" >
+          </form>
+        </td>
+        <td>
+          <form action="food/delete" method="post">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-danger" type="submit" value="Delete">
+          </form>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <form action="/food/new" method="get">
+    <input class="btn btn-success" type="submit" value="Tambahkan menu">
+  </form>
+</div>
+
+      
