--- a/app/views/customer/edit.html.erb
+++ b/app/views/customer/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Customer#edit</h1>
-<p>Find me in app/views/customer/edit.html.erb</p>
+<div class="container" style="margin-top:13%; width:50%">
+  <h2 class="mb-3">Editing Pelanggan
+    <%= @customer.email.split('@')[0].titleize %></h2>
+  
+  <%= form_with(model: @customer, url: customer_path) do |form| %>
+  <div class="form-row mb-3">
+    <div class="col">
+    <%= form.text_field :name, class: "form-control", placeholder: @customer.email %>
+    </div>
+  <input class="btn btn-success" type="submit" value="Selesai">
+  <% end %>
+</div>
