--- a/app/views/customer/index.html.erb
+++ b/app/views/customer/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Customer#index</h1>
-<p>Find me in app/views/customer/index.html.erb</p>
+<div class="container-lg" style="margin-top:3%">
+  <h1>Pelanggan Pak Gagah</h1>
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Num</th>
+        <th scope="col">Email</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @customers.each_with_index do |cust, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%= cust.email %></td>
+        <td>
+          <form action="/customer/edit/<%= index + 1 %>" method="get">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-primary" type="submit" value="Edit" >
+          </form>
+        </td>
+        <td>
+          <form action="customer/delete" method="post">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-danger" type="submit" value="Delete">
+          </form>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <form action="/customer/new" method="get">
+    <input class="btn btn-success" type="submit" value="Tambahkan customer">
+  </form>
+</div>
+
+      
