--- a/app/views/customer/new.html.erb
+++ b/app/views/customer/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Customer#new</h1>
-<p>Find me in app/views/customer/new.html.erb</p>
+<div class="container" style="margin-top:13%; width:50%">
+  <h2 class="mb-3">Buat Identitas Pelanggan Baru</h2>
+  <%= form_with(model: @customer, url: customer_index_path) do |form| %>
+  <div class="form-row mb-3">
+    
+    <div class="col">
+    <%= form.text_field :email, class: "form-control", placeholder: "Email" %>
+    </div>
+    
+  <input class="btn btn-success" type="submit" value="Selesai">
+  <% end %>
+</div>
