--- a/app/views/food/index.html.erb
+++ b/app/views/food/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-lg" style="margin-top:3%">
-  <h1>Warung Pak Gagah</h1>
+  <h1>Menu Warung Pak Gagah</h1>
     <table class="table table-striped">
     <thead>
       <tr>
