--- a/app/views/category/edit.html.erb
+++ b/app/views/category/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Category#edit</h1>
-<p>Find me in app/views/category/edit.html.erb</p>
+<div class="container" style="margin-top:13%; width:50%">
+  <h2 class="mb-3">Editing Kategori <%= @category.name %></h2>
+  
+  <%= form_with(model: @category, url: category_path) do |form| %>
+  <div class="form-row mb-3">
+    <div class="col">
+    <%= form.text_field :name, class: "form-control", placeholder: @category.name %>
+    </div>
+  <input class="btn btn-success" type="submit" value="Selesai">
+  <% end %>
+</div>
