--- a/app/views/order/index.html.erb
+++ b/app/views/order/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Order#index</h1>
-<p>Find me in app/views/order/index.html.erb</p>
+<div class="container-lg" style="margin-top:3%">
+  <h1>Pesanan Warung Pak Gagah</h1>
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Num</th>
+        <th scope="col">Date</th>
+        <th scope="col">Status</th>
+        <th scope="col">Customer</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @orders.each_with_index do |o, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%= o.order_date %></td>
+        <td><%= o.status %></td>
+        <td><%= @emails[index].split("@")[0].titleize %></td>
+        <td><a href="/order/<%= index + 1 %>">Show</a></td>
+        <td>
+          <form action="/order/edit/<%= index + 1 %>" method="get">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-primary" type="submit" value="Edit" >
+          </form>
+        </td>
+        <td>
+          <form action="order/delete" method="post">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-danger" type="submit" value="Delete">
+          </form>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <form action="/order/new" method="get">
+    <input class="btn btn-success" type="submit" value="Tambahkan order">
+  </form>
+</div>
