--- a/app/views/order/new.html.erb
+++ b/app/views/order/new.html.erb
@@ -1,2 +1,23 @@
-<h1>Order#new</h1>
-<p>Find me in app/views/order/new.html.erb</p>
+<%= require 'date' %>
+<div class="container" style="margin-top:13%; width:50%">
+  <h2 class="mb-3">Buat Order Baru</h2>
+  <%= form_with(model: @order, url: customer_index_path) do |form| %>
+  <div class="form-row mb-3">
+    <div class="col">
+    <%= form.text_field :order_date, class: "form-control", placeholder: DateTime.now() %>
+    </div>
+  </div>
+  <div class="form-row mb-3">
+    <div class="col">
+    <%= form.text_field :status, class: "form-control", placeholder: 0 %>
+    </div>
+  </div>
+  <div class="form-row mb-3">
+    <div class="col">
+    <%= form.text_field :customer_id, class: "form-control", placeholder: "nanti dropdown" %>
+    </div>
+  </div>
+  <input type="hidden" name="total_price" value="0">
+  <input class="btn btn-success" type="submit" value="Selesai">
+  <% end %>
+</div>
