--- a/app/views/order/show.html.erb
+++ b/app/views/order/show.html.erb
@@ -1,2 +1,42 @@
-<h1>Order#show</h1>
-<p>Find me in app/views/order/show.html.erb</p>
+<div class="container-lg" style="margin-top:3%">
+  <h1>Order ke-<%= @order.id %></h1>
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Num</th>
+        <th scope="col">Name</th>
+        <th scope="col">Price</th>
+        <th scope="col">QTY</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @order_details.each_with_index do |od, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%= od.food_id %></td>
+        <td><%= od.food_price %></td>
+        <td><%= od.qty %></td>
+        <td>
+          <form action="/order/<%= @order.id %>/order_detail/edit/<%= index + 1 %>" method="get">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-primary" type="submit" value="Edit" >
+          </form>
+        </td>
+        <td>
+          <form action="/order/<%= @order.id %>/order_detail/delete" method="post">
+            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input class="btn btn-danger" type="submit" value="Delete">
+          </form>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <form action="/order/<%= @order.id %>/order_detail/new" method="get">
+    <input class="btn btn-success" type="submit" value="Tambahkan order">
+  </form>
+</div>
+
+      
