controller order and order detail  done

--- a/app/views/category/new.html.erb
+++ b/app/views/category/new.html.erb
@@ -9,4 +9,8 @@
     
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
+
+  <form class="mt-2" action="/category" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
 </div>
