--- a/app/views/customer/new.html.erb
+++ b/app/views/customer/new.html.erb
@@ -8,4 +8,8 @@
   </div>
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
+
+  <form class="mt-2" action="/customer" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
 </div>
