--- a/app/views/food/edit.html.erb
+++ b/app/views/food/edit.html.erb
@@ -4,11 +4,11 @@
   <div class="form-row mb-3">
     
     <div class="col">
-    <%= form.text_field :name, class: "form-control", placeholder: @food.name %>
+    <%= form.text_field :name, class: "form-control", value: @food.name %>
     </div>
     
     <div class="col">
-    <%= form.text_field :price, class: "form-control",  placeholder: @food.name %>
+    <%= form.text_field :price, class: "form-control",  value: @food.price %>
     </div>
     
   <input class="btn btn-success" type="submit" value="Selesai">
