--- a/app/views/category/index.html.erb
+++ b/app/views/category/index.html.erb
@@ -14,16 +14,15 @@
         <td><%= index + 1 %></td>
         <td><%= cat.name %></td>
         <td>
-          <form action="/category/edit/<%= index + 1 %>" method="get">
-            <input type="hidden" name="id" value="<%= index + 1 %>">
-            <input class="btn btn-primary" type="submit" value="Edit" >
+          <form action="/category/edit/<%= cat.id %>" method="get">
+            <input class="btn btn-primary" type="submit" placeholder="Edit" >
           </form>
         </td>
       </tr>
     <% end %>
     </tbody>
   </table>
-  <form action="/category/new" method="get">
+  <form action="/category/new" method="post">
     <input class="btn btn-success" type="submit" value="Tambahkan kategori">
   </form>
 </div>
