--- a/app/views/customer/edit.html.erb
+++ b/app/views/customer/edit.html.erb
@@ -5,7 +5,7 @@
   <%= form_with(model: @customer, url: customer_path) do |form| %>
   <div class="form-row mb-3">
     <div class="col">
-    <%= form.text_field :name, class: "form-control", placeholder: @customer.email %>
+    <%= form.text_field :email, class: "form-control", value: @customer.email %>
     </div>
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
