--- a/app/views/order/index.html.erb
+++ b/app/views/order/index.html.erb
@@ -17,18 +17,16 @@
       <tr>
         <td><%= index + 1 %></td>
         <td><%= o.order_date %></td>
-        <td><%= o.status %></td>
-        <td><%= @emails[index].split("@")[0].titleize %></td>
-        <td><a href="/order/<%= index + 1 %>">Show</a></td>
+        <td><%= o.order_status %></td>
+        <td><%= o.cust_email %></td>
         <td>
-          <form action="/order/edit/<%= index + 1 %>" method="get">
-            <input type="hidden" name="id" value="<%= index + 1 %>">
-            <input class="btn btn-primary" type="submit" value="Edit" >
+          <form action="/order/<%= o.id %>" method="get">
+            <input class="btn btn-primary" type="submit" value="Atur" >
           </form>
         </td>
         <td>
           <form action="order/delete" method="post">
-            <input type="hidden" name="id" value="<%= index + 1 %>">
+            <input type="hidden" name="id" value="<%= o.id %>">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </td>
@@ -36,7 +34,7 @@
     <% end %>
     </tbody>
   </table>
-  <form action="/order/new" method="get">
+  <form action="/order/new" method="post">
     <input class="btn btn-success" type="submit" value="Tambahkan order">
   </form>
 </div>
