--- a/app/views/order/new.html.erb
+++ b/app/views/order/new.html.erb
@@ -1,23 +1,40 @@
-<%= require 'date' %>
 <div class="container" style="margin-top:13%; width:50%">
   <h2 class="mb-3">Buat Order Baru</h2>
-  <%= form_with(model: @order, url: customer_index_path) do |form| %>
+  <%= form_with(model: @order, url: order_index_path) do |form| %>
   <div class="form-row mb-3">
     <div class="col">
-    <%= form.text_field :order_date, class: "form-control", placeholder: DateTime.now() %>
+    <label>Time</label>
+    <% t = Time.now.in_time_zone("Asia/Jakarta") %>
+    <%= form.text_field :time, class: "form-control", value: t.strftime("%Y-%m-%d %H:%M:%S") %>
     </div>
   </div>
+      
   <div class="form-row mb-3">
+    
     <div class="col">
-    <%= form.text_field :status, class: "form-control", placeholder: 0 %>
+    <label>Customer</label>
+    <select name="cid" class="form-control">
+      <%= @customers.each do |c| %>
+      <option value="<%= c.id %>"><%= c.email %></option>
+      <% end %>
+    </select>
+    </div>
+
+    <div class="col">
+    <label>Status</label>
+    <select name="status" class="form-control" aria-label=".form-select-lg example">
+      <option value="0">NEW</option>
+      <option value="1">PAID</option>
+      <option value="2">CANCELED</option>
+    </select>
     </div>
   </div>
-  <div class="form-row mb-3">
-    <div class="col">
-    <%= form.text_field :customer_id, class: "form-control", placeholder: "nanti dropdown" %>
-    </div>
-  </div>
+        
   <input type="hidden" name="total_price" value="0">
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
+
+  <form class="mt-2" action="/order" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
 </div>
