--- a/app/views/order_detail/edit.html.erb
+++ b/app/views/order_detail/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>OrderDetail#edit</h1>
-<p>Find me in app/views/order_detail/edit.html.erb</p>
+<div class="container" style="margin-top:13%; width:50%">
+ <h2 class="mb-3">Editing menu untuk order ke-<%= @order_detail.order_id %></h2>
+  <%= form_with(model: @order_detail, url: order_detail_index_path) do |form| %>
+  <div class="form-row mb-3">
+
+    <div class="col">
+      <label>Food Name</label>
+      <select name="fid" class="form-control">
+          <%= @foods.each do |f| %>
+          <option value="<%= f.id %>"><%= f.name %></option>
+          <% end %>
+      </select>
+    </div>
+ 
+    <div class="col">
+      <label>Harga</label>
+      <%= form.text_field :food_price, class: "form-control", value: @order_detail.food_price %>
+    </div>
+    
+    <div class="col">
+      <label>Jumlah</label>
+      <%= form.number_field :qty, step: :any, class: "form-control",  value: @order_detail.qty %>
+    </div>
+
+  </div>
+            
+  <input type="hidden" name="id" value="<%= @order_detail.id %>">
+  <input type="hidden" name="order_id" value="<%= @order_detail.order_id %>">
+  <input class="btn btn-success" type="submit" value="Selesai">
+  <% end %>
+</div>
