--- a/app/views/order_detail/new.html.erb
+++ b/app/views/order_detail/new.html.erb
@@ -1,2 +1,27 @@
-<h1>OrderDetail#new</h1>
-<p>Find me in app/views/order_detail/new.html.erb</p>
+<div class="container" style="margin-top:13%; width:50%">
+  <h2 class="mb-3">Buat detil baru untuk <%= @order.cust_email %></h2>
+  <%= form_with(model: @order_detail, url: order_detail_index_path) do |form| %>
+  <div class="form-row mb-3">
+    <div class="col">
+      <label>Food Name</label>
+      <select name="fid" class="form-control">
+        <%= @foods.each do |f| %>
+        <option value="<%= f.id %>"><%= f.name %></option>
+        <% end %>
+      </select>
+    </div>
+          
+    <div class="col">
+      <label>Quantity</label>
+      <input class="form-control" type="number" name="qty" value=0>
+    </div>
+  </div>
+
+  <input type="hidden" name="oid" value="<%= @order.id %>">
+  <input class="btn btn-success" type="submit" value="Selesai">
+  <% end %>
+
+  <form class="mt-2" action="/order/<%= @order.id %>" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
+</div>
