--- a/app/views/category/new.html.erb
+++ b/app/views/category/new.html.erb
@@ -2,11 +2,10 @@
   <h2 class="mb-3">Buat Kategori Baru</h2>
   <%= form_with(model: @category, url: category_index_path) do |form| %>
   <div class="form-row mb-3">
-    
     <div class="col">
     <%= form.text_field :name, class: "form-control", placeholder: "Name" %>
     </div>
-    
+  </div>
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
 
