--- a/app/views/food/edit.html.erb
+++ b/app/views/food/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top:13%; width:50%">
   <h2 class="mb-3">Editing <%= @food.name %></h2>
-  <%= form_with(model: @food, url: food_path) do |form| %>
+  <%= form_with(model: @food, url: food_path(@food.id)) do |form| %>
   <div class="form-row mb-3">
     
     <div class="col">
