--- a/app/views/customer/index.html.erb
+++ b/app/views/customer/index.html.erb
@@ -29,7 +29,7 @@
     <% end %>
     </tbody>
   </table>
-  <form action="/customer/new" method="post">
+  <form action="/customer/new" method="get">
     <input class="btn btn-success" type="submit" value="Tambahkan customer">
   </form>
 </div>
