--- a/app/views/food/index.html.erb
+++ b/app/views/food/index.html.erb
@@ -19,13 +19,12 @@
         <td><%= food.price %></td>
         <td><a href="/food/<%= food.id %>">Show</a></td>
         <td>
-          <form action="/food/edit/<%= food.id %>" method="get">
+          <form action="/food/<%= food.id %>/edit" method="get">
             <input class="btn btn-primary" type="submit" value="Edit" >
           </form>
         </td>
         <td>
-          <form action="food/delete" method="post">
-            <input type="hidden" name="id" value="<%= food.id %>">
+          <form action="food/<%= food.id %>/delete" method="post">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </td>
@@ -33,7 +32,7 @@
     <% end %>
     </tbody>
   </table>
-  <form action="/food/new" method="post">
+  <form action="/food/new" method="get">
     <input class="btn btn-success" type="submit" value="Tambahkan menu">
   </form>
 </div>
