--- a/app/views/order/index.html.erb
+++ b/app/views/order/index.html.erb
@@ -18,15 +18,14 @@
         <td><%= index + 1 %></td>
         <td><%= o.order_date %></td>
         <td><%= o.order_status %></td>
-        <td><%= o.cust_email %></td>
+        <td><%= o.customer_email %></td>
         <td>
           <form action="/order/<%= o.id %>" method="get">
             <input class="btn btn-primary" type="submit" value="Atur" >
           </form>
         </td>
         <td>
-          <form action="order/delete" method="post">
-            <input type="hidden" name="id" value="<%= o.id %>">
+          <form action="order/<%= o.id %>/delete" method="post">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </td>
@@ -34,7 +33,7 @@
     <% end %>
     </tbody>
   </table>
-  <form action="/order/new" method="post">
+  <form action="/order/new" method="get">
     <input class="btn btn-success" type="submit" value="Tambahkan order">
   </form>
 </div>
