--- a/app/views/customer/edit.html.erb
+++ b/app/views/customer/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="container" style="margin-top:13%; width:50%">
-  <h2 class="mb-3">Editing Pelanggan
-    <%= @customer.email.split('@')[0].titleize %></h2>
+  <h2 class="mb-3">Editing Pelanggan <%= @customer.nickname %></h2>
   
-  <%= form_with(model: @customer, url: customer_path) do |form| %>
+  <%= form_with(model: @customer, url: customer_path(@customer.id)) do |form| %>
   <div class="form-row mb-3">
     <div class="col">
     <%= form.text_field :email, class: "form-control", value: @customer.email %>
     </div>
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
+    
 </div>
