want to try indexing in join table

--- a/app/views/food/new.html.erb
+++ b/app/views/food/new.html.erb
@@ -13,22 +13,14 @@
     
     </div>
     
-  <div class="form-row mb">
-    <div class="col tag-container">
-      <input style="border:1px solid lightgrey;" class="form-control" placeholder="Category">
-    </div>
-    
-  </div>
-    
-  <div class="form-row">
-    <div class="col mt-1">
-    <p style="color:grey;">
-      Tekan escape untuk menambahkan kategori.
-    </p>
+  <div class="form-row mb-3">
+    <div class="col">
+     <%= form.collection_select :category_ids, 
+       Category.order(:name), :id, :name, {}, 
+       { class:"form-control select2", multiple:true } %>
     </div>
   </div>
-
-  <input id="hidden-tags" type="hidden" name="tags" value="">
+    
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
   
@@ -37,4 +29,6 @@
   </form>
 </div>
 
-<%= javascript_include_tag 'category'%>
+<script>
+  $(document).ready(function() { $(".select2").select2(); });
+</script>
