--- a/app/views/order_detail/new.html.erb
+++ b/app/views/order_detail/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top:13%; width:50%">
-  <h2 class="mb-3">Buat detil baru untuk <%= @order.cust_email %></h2>
-  <%= form_with(model: @order_detail, url: order_detail_index_path) do |form| %>
+  <h2 class="mb-3">Buat detil baru untuk <%= @order.customer_email %></h2>
+  <%= form_with(model: @order_detail, url: order_order_detail_index_path) do |form| %>
   <div class="form-row mb-3">
     <div class="col">
       <label>Food Name</label>
