add some controller test

--- a/app/views/category/index.html.erb
+++ b/app/views/category/index.html.erb
@@ -31,6 +31,9 @@
   <form action="/category/new" method="get">
     <input class="btn btn-success" type="submit" value="Tambahkan kategori">
   </form>
+  <form class="mt-2" action="/" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
 </div>
 
       
