--- a/app/views/order/index.html.erb
+++ b/app/views/order/index.html.erb
@@ -39,4 +39,7 @@
   <form action="/order/new" method="get">
     <input class="btn btn-success" type="submit" value="Tambahkan order">
   </form>
+  <form class="mt-2" action="/" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
 </div>
