--- a/app/views/food/index.html.erb
+++ b/app/views/food/index.html.erb
@@ -35,4 +35,7 @@
   <form action="/food/new" method="get">
     <input class="btn btn-success" type="submit" value="Tambahkan menu">
   </form>
+  <form class="mt-2" action="/" method="get">
+    <input class="btn btn-danger" type="submit" value="Back">
+  </form>
 </div>
