--- a/app/views/food/new.html.erb
+++ b/app/views/food/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top:13%; width:50%">
   <h2 class="mb-3">Buat Menu Baru</h2>
-  <%= form_with(model: @food, url: food_index_path) do |form| %>
+  <%= form_with(url: food_index_path) do |form| %>
   <div class="form-row mb-3">
     
     <div class="col">
@@ -15,7 +15,7 @@
     
   <div class="form-row mb-3">
     <div class="col">
-     <%= form.collection_select :category_ids, 
+     <%= form.collection_select :categories, 
        Category.order(:name), :id, :name, {}, 
        { class:"form-control select2", multiple:true } %>
     </div>
