add query feature order

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container" style="margin-top:11%; width:80%">
-  <h1 style="align-text:center;">Selamat datang, Pak Gagah dan Bu Guguh!</h1>
+  <h1 class="text-justify">Selamat datang, Pak Gagah dan Bu Guguh!</h1>
   <div class="card mt-3">
     <div class="card-body">
       Untuk menggunakan aplikasi ini, ada beberapa hal yang perlu diperhatikan:<br>
