--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -15,11 +15,11 @@
   <div class="container" style="margin-left:25%; width:50%;">
   <a href="/category" class="btn btn-primary btn-lg mr-3 mt-2" role="button" a>
     Category</a>
-  <a href="/food" class="btn btn-primary btn-lg mr-3 mt-2" role="button" a>
+  <a href="/food" class="btn btn-danger btn-lg mr-3 mt-2" role="button" a>
     Food</a>
-  <a href="/customer" class="btn btn-primary btn-lg mr-3 mt-2" role="button" a>
+  <a href="/customer" class="btn btn-success btn-lg mr-3 mt-2" role="button" a>
     Customer</a>
-  <a href="/order" class="btn btn-primary btn-lg mr-3 mt-2" role="button" a>
+  <a href="/order" class="btn btn-dark btn-lg mr-3 mt-2" role="button" a>
     Order</a>
   </div>
 </div>
