--- a/app/views/order/new.html.erb
+++ b/app/views/order/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top:13%; width:50%">
   <h2 class="mb-3">Buat Order Baru</h2>
-  <%= form_with(model: @order, url: order_index_path) do |form| %>
+  <%= form_with(url: order_index_path) do |form| %>
   <div class="form-row mb-3">
     <div class="col">
     <label>Time</label>
