--- a/app/views/category/index.html.erb
+++ b/app/views/category/index.html.erb
@@ -1,12 +1,15 @@
 <div class="container-lg" style="margin-top:3%">
   <h1>Kategori Menu di Warung Pak Gagah</h1>
-    <table class="table table-striped">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">Num</th>
         <th scope="col">Name</th>
         <th scope="col"></th>
-        <th scope="col"></th>
+        <th scope="col">    
+          <button type="button" class="btn btn-dark" data-toggle="modal" 
+            data-target="#exampleModal">Tutorial</button>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -36,4 +39,30 @@
   </form>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cara menggunakan</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Tambahiinnn kategori makanan sepuasnya! <br>
+        Kategori bisa ditambahkan tanpa harus membuat daftar yang lain. <br>
+        Pastikan kategorinya unik ya! :)
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
       
+<script>
+  $('#myModal').on('shown.bs.modal', function () {
+    $('#myInput').trigger('focus')
+  })  
+</script>      
