--- a/app/views/customer/index.html.erb
+++ b/app/views/customer/index.html.erb
@@ -1,12 +1,15 @@
 <div class="container-lg" style="margin-top:3%">
   <h1>Pelanggan Pak Gagah</h1>
-    <table class="table table-striped">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">Num</th>
         <th scope="col">Email</th>
         <th scope="col"></th>
-        <th scope="col"></th>
+        <th scope="col">    
+          <button type="button" class="btn btn-dark" data-toggle="modal" 
+            data-target="#exampleModal">Tutorial</button>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -35,5 +38,33 @@
     <input class="btn btn-danger" type="submit" value="Back">
   </form>
 </div>
-
       
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cara menggunakan</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Data customer hanya disimpan melalui email, ya! <br>
+        Nantinya, ketika melakukan pencarian di order, Bapak/Ibu bisa 
+        menggunakan kolom pencarian. <br>
+        Jangan lupa, email yang dimasukkan harus valid! (example@hello.com) <br>
+        ... dan pastinya harus unik :D
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+      
+<script>
+  $('#myModal').on('shown.bs.modal', function () {
+    $('#myInput').trigger('focus')
+  })  
+</script>
