--- a/app/views/food/edit.html.erb
+++ b/app/views/food/edit.html.erb
@@ -10,7 +10,7 @@
     <div class="col">
     <%= form.text_field :price, class: "form-control",  value: @food.price %>
     </div>
-    
+  </div>
   <input class="btn btn-success" type="submit" value="Selesai">
   <% end %>
 </div>
